@@ -114,6 +114,9 @@ static const rb_data_type_t onum_data_type = {
 #ifdef RUBY_TYPED_FREE_IMMEDIATELY
     NULL, NULL, RUBY_TYPED_FREE_IMMEDIATELY
 #endif
+#ifdef RUBY_TYPED_WB_PROTECTED
+    | RUBY_TYPED_WB_PROTECTED
+#endif
 };
 
 static VALUE onum_s_alloc(VALUE klass)
